# vf2_firmware

./: .gitignore  Cargo.toml  README.md  gen_img.sh  link.ld
src/: entry.S  fat.rs  fs.rs  lib.rs  logger.rs  main.rs  sd.rs  timer.rs  uart.rs
tools/: vf2-imager
