[package]
name = "vf2_firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
tom_arch = { git = "https://github.com/QIUZHILEI/tom_arch.git", features = [
    "riscv_M",
    "riscv_S",
    "riscv_timer",
], branch = "dev" }
tom_device = { git = "https://github.com/QIUZHILEI/tom_device.git", features = [
    "char",
    "block",
], branch = "dev" }
tom_timer = { git = "https://github.com/QIUZHILEI/tom_timer.git", branch = "dev" }
log = "0.4"
gpt = { git = "https://github.com/QIUZHILEI/gpt.git", branch = "dev" }
serial = { git = "https://github.com/QIUZHILEI/serial.git", branch = "dev" }
sdio = { git = "https://github.com/QIUZHILEI/sdio.git", branch = "dev" }
minifat = { git = "https://github.com/QIUZHILEI/minifat.git", branch = "dev" }
