[package]
name = "vf2_firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
tom_arch = { git = "https://github.com/QIUZHILEI/tom_arch.git", features = [
    "riscv_M",
    "riscv_S",
    "riscv_timer",
], branch = "main" }
tom_device = { git = "https://github.com/QIUZHILEI/tom_device.git", features = [
    "char",
    "block",
], branch = "main" }
tom_timer = { git = "https://github.com/QIUZHILEI/tom_timer.git", branch = "main" }
log = "0.4"
gpt = { git = "https://github.com/QIUZHILEI/gpt.git", branch = "main" }
serial = { git = "https://github.com/QIUZHILEI/serial.git", branch = "main" }
sdio = { git = "https://github.com/QIUZHILEI/sdio.git", branch = "main" }
byteorder = { version = "1", default-features = false }