[package]
name = "vf2_firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
lego_device = { git = "https://github.com/lego-os/lego_device.git", features = [
    "char",
    "block",
], branch = "main" }
lego_arch = { git = "https://github.com/lego-os/lego_arch.git", features = [
    "rv_mch",
], branch = "main" }
gpt = { git = "https://github.com/QIUZHILEI/gpt.git", branch = "main" }
uart_8250 = { git = "https://github.com/QIUZHILEI/uart_8250.git", branch = "main" }
dw_sd = { git = "https://github.com/QIUZHILEI/dw_sd.git", branch = "main" }
log = "0"
byteorder = { version = "1", default-features = false }

[profile.release]
opt-level = 3
